--- a/angular-18/src/index.html
+++ b/angular-18/src/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>Angular18</title>
+  <title>ChangeDetectionStrategy.OnPush Visual Concept</title>
   <base href="/">
   <meta name="viewport" content="width=1280, user-scalable=no">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
